--- a/index.html
+++ b/index.html
@@ -466,12 +466,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/two.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/electricals.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Landscaping</h4>
                 <p>BBnz Live</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/two.jpg" data-gall="portfolioGallery" class="venobox" title="Landscaping"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/electricals.jpg" data-gall="portfolioGallery" class="venobox" title="Landscaping"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -542,6 +542,48 @@
                 <p>*Undisclosed*</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/stair.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/ceiling.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential</h4>
+                <p>*Undisclosed*</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/ceiling.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/pool.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential</h4>
+                <p>*Undisclosed*</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/pool.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/kitchen.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential</h4>
+                <p>*Undisclosed*</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/kitchen.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
