--- a/index.html
+++ b/index.html
@@ -106,34 +106,34 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url('assets/img/hero-bg.jpg');">
+          <div class="carousel-item active"  style="background-image: url('assets/img/slides/slide1.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h2 class="animate__animated animate__fadeInDown">Slide Show <span>One</span></h2>
-                <p class="animate__animated animate__fadeInUp">Soupi Soupi text at the buttom.</p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
               </div>
             </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item" style="background-image: url('assets/img/hero-bg.jpg');">
+          <div class="carousel-item" style="background-image: url('assets/img/slides/slide2.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h2 class="animate__animated animate__fadeInDown">The second one</h2>
-                <p class="animate__animated animate__fadeInUp">Another text at the ending</p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
               </div>
             </div>
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url('assets/img/slide/slide-3.jpg');">
+          <div class="carousel-item" style="background-image: url('assets/img/slides/slide3.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h2 class="animate__animated animate__fadeInDown">Final Slideshowww</h2>
-                <p class="animate__animated animate__fadeInUp">Yeah, we have finished.</p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
               </div>
             </div>
           </div>
@@ -1093,7 +1093,7 @@
 
       <div class="me-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Real-Estate-Startup</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Defo Properties</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -1103,7 +1103,7 @@
           <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-left: auto;">
         <a href="https://twitter.com/DefoProperties?s=20" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <a href="https://www.instagram.com/_fosu/" class="instagram"><i class="bx bxl-instagram"></i></a>
