--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="carousel-content container">
                 <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
                 <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
               <div class="carousel-content container">
                 <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
                 <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
               <div class="carousel-content container">
                 <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
                 <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Read More</a>
+                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
           </div>
