--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </section> -->
   <section id="hero">
     <div class="hero-container">
-      <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+      <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
 
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
@@ -109,8 +109,8 @@
           <div class="carousel-item active"  style="background-image: url('assets/img/slides/slide1.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
-                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white; ">We are a startup of real estate developers ready to build your dream</h5>
                 <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
@@ -120,8 +120,8 @@
           <div class="carousel-item" style="background-image: url('assets/img/slides/slide2.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
-                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white;">We are a startup of real estate developers ready to build your dream</h5>
                 <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
@@ -131,8 +131,8 @@
           <div class="carousel-item" style="background-image: url('assets/img/slides/slide3.jpg');">
             <div class="carousel-container">
               <div class="carousel-content container">
-                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;  width: 50vw;">Welcome to Defo <span>Properties</span></h1>
-                <h5 class="animate__animated animate__fadeInUp" style="color: white; width: 30vw;">We are a startup of real estate developers ready to build your dream</h5>
+                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                <h5 class="animate__animated animate__fadeInUp" style="color: white;">We are a startup of real estate developers ready to build your dream</h5>
                 <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
               </div>
             </div>
@@ -140,14 +140,14 @@
 
         </div>
 
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon icofont-rounded-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
           <span class="carousel-control-next-icon icofont-rounded-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
-        </a>
+        </a> -->
 
       </div>
     </div>
@@ -188,7 +188,7 @@
               <p>
                 Defo Properties believe in a lot of value that makes working with us a beautiful experience.
               </p>
-              <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
+              <!-- <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
