--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container d-flex align-items-center">
       <!-- <h1 class="logo me-auto"><a href="index.html">Defo Properties<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="assets/img/Logo-sized.png" alt=""></a>
+      <a href="index.html" class="logo me-auto"><img src="assets/img/logo3.png" alt=""></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
