--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Real-Estate-Startup<span>.</span></h3>
+            <h3>Defo Properties<span>.</span></h3>
             <p>
               Konadu Complex Community 4, <br>
              Tema, <br>
