--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
   </section> -->
-  <section id="hero">
+  <section id="hero"  >
     <div class="hero-container">
       <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
 
@@ -108,10 +108,16 @@
           <!-- Slide 1 -->
           <div class="carousel-item active"  style="background-image: url('assets/img/slides/slide1.jpg');">
             <div class="carousel-container">
-              <div class="carousel-content container">
-                <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
-                <h5 class="animate__animated animate__fadeInUp" style="color: white; ">We are a startup of real estate developers ready to build your dream</h5>
-                <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
+              <div class="animate__animated carousel-content container animate__animated animate__fadeInDown animate__delay-5s">
+                <div data-aos="fade-up" >
+                <h1 class="animate__animated animate__fadeInDown animate__delay-5s" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                </div>
+                <div data-aos="fade-up">
+                  <h5 class="animate__animated animate__fadeInUp animate__delay-2s" style="color: white; ">We are a startup of real estate developers ready to build your dream</h5>
+                </div>
+                <div data-aos="fade-up">
+                  <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
+                </div>
               </div>
             </div>
           </div>
@@ -174,7 +180,6 @@
     </section> -->
     <!-- End Clients Section -->
 
-    
 
 
     <!-- ======= About Section ======= -->
@@ -1106,7 +1111,7 @@
       <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-left: auto;">
         <a href="https://twitter.com/DefoProperties?s=20" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <a href="https://www.instagram.com/_fosu/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/defo.properties/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
