--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="icofont-computer"></i>
               <h4>Installation Works</h4>
-              <p>Our team can install all your wiring, furniture works, POP design, Plaster boards, Plumbing etc. .</p>
+              <p>Our team can install all your wiring problems,and also install pop, furniture works, plaster boards, plumbing etc..</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
