--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="content">
               <h3>Our Values</h3>
               <p>
-                Defo Properties believe in a lot of value that makes working with us a beautiful experience.
+                Defo properties mission is to have satisfied clients and to be well-known in the real estate community. We want to also provide an outstanding level of services and expertise in the real estate market that is innovation and ambitious. Our company is dedicated to highest standards, systems and performance necessary to fulfill all your real estate dreams. We as a company want to promote the highest ethical and professional standards and cooperation among its members by providing programs and services to meet the evolving needs of real estate industry and customers.
               </p>
               <!-- <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a> -->
             </div>
