--- a/index.html
+++ b/index.html
@@ -189,10 +189,32 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch">
             <div class="content">
-              <h3>Our Values</h3>
+              <h3>Our Mission</h3>
               <p>
-                Defo properties mission is to have satisfied clients and to be well-known in the real estate community. We want to also provide an outstanding level of services and expertise in the real estate market that is innovation and ambitious. Our company is dedicated to highest standards, systems and performance necessary to fulfill all your real estate dreams. We as a company want to promote the highest ethical and professional standards and cooperation among its members by providing programs and services to meet the evolving needs of real estate industry and customers.
+                Defo properties mission is to have satisfied clients and to be well-known in the real estate community. We want to also provide an 
+                outstanding level of services and expertise in the real 
+                estate market that is innovation and ambitious. 
+                Our company is dedicated to highest standards, systems and performance necessary to fulfill all your 
+                real estate dreams. We as a company want to promote the highest ethical and professional standards and 
+                cooperation among its members by providing programs and services to meet the evolving needs of real estate industry and customers.
               </p>
+              <!-- <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a> -->
+            </div>
+          </div>
+          <div class="content col-xl-6 d-flex align-items-stretch">
+            <div class="content">
+              <h3>Our Vision</h3>
+              <p>
+                Our vision statement is to be one of the best estate companies in Ghana and its affliated countries. We want 
+                to be the company that will provide quick and efficient services for our customers.We offer alot of customer 
+                centered services. Whereby producing efficient results and 24/7 support are grounds we stand on.
+              </p>
+              <!-- <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a> -->
+            </div>
+          </div>
+          <div class="content col-xl-6 d-flex align-items-stretch">
+            <div class="content">
+              <h3>Our Values</h3>
               <!-- <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
@@ -488,8 +510,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/door.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Wall Mural</h4>
-                <p>Central University Ghana</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/door.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -502,8 +524,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/three.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>17th Support Mission House </h4>
-                <p>Miotso Junction</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/three.jpg" data-gall="portfolioGallery" class="venobox" title="17th Support"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -516,8 +538,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/contstruct11.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Wall Mural</h4>
-                <p>Dansoman Estates</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/construct11.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -530,8 +552,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/electricals.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Landscaping</h4>
-                <p>BBnz Live</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/electricals.jpg" data-gall="portfolioGallery" class="venobox" title="Landscaping"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -544,8 +566,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/car.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ASAPGhana Office</h4>
-                <p>East Legon</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/car.jpg" data-gall="portfolioGallery" class="venobox" title="ASAPGhana"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -558,8 +580,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/six.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Aljay Night Club</h4>
-                <p>Comm. 18 </p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/six.jpg" data-gall="portfolioGallery" class="venobox" title="Alijay"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -572,8 +594,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/fence.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>50 3rd Road, Ablekuma</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/fence.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -586,8 +608,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/gate.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>*Undisclosed*</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/gate.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -600,8 +622,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/stair.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>*Undisclosed*</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/stair.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -614,8 +636,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/ceiling.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>*Undisclosed*</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/ceiling.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -628,8 +650,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/pool.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>*Undisclosed*</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/pool.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -642,8 +664,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/kitchen.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Residential</h4>
-                <p>*Undisclosed*</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/kitchen.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
