--- a/index.html
+++ b/index.html
@@ -659,6 +659,7 @@
               </div>
             </div>
           </div>
+          
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -674,10 +675,91 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/apt.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4></h4>
+                <p></p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/apt.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/stair2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4></h4>
+                <p></p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/stair2.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fixed/lounge.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4></h4>
+                <p></p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/fixed/lounge.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
     </section><!-- End Portfolio Section -->
+    <!--Why choose Defo properties-->
+    <section id="team" class="team section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Why Choose Defo Properties?</h2>
+          <p>Defo properties are trustworthy and deliver with sheer brillioance. We offer the best, quality and affordable
+            services within every cliennts budget. We make sure our customers security is 100% secured, extra privacy for them
+            and sense of community
+          </p>
+      
+        </div>
+
+        <div class="row">
+
+
+
+          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
+              <div class="member-img">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Amanda Jepson</h4>
+                <span>Accountant</span>
+              </div>
+            </div>
+          </div> -->
+
+        </div>
+
+      </div>
+    </section>
+    <!--End of why choose defo properties session-->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
