--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@
 
         <div class="section-title">
           <h2>Why Choose Defo Properties?</h2>
-          <p>Defo properties are trustworthy and deliver with sheer brillioance. We offer the best, quality and affordable
-            services within every cliennts budget. We make sure our customers security is 100% secured, extra privacy for them
+          <p>Defo properties are trustworthy and deliver with sheer brilliance. We offer the best, quality and affordable
+            services within every clients budget and a sense of community. We make sure our customers security is 100% secured, extra privacy for them
             and sense of community
           </p>
       
