--- a/index.html
+++ b/index.html
@@ -143,7 +143,37 @@
               </div>
             </div>
           </div>
+                  <!-- Slide 4-->
+                    <div class="carousel-item" style="background-image: url('assets/img/slides/apt.jpg');">
+                      <div class="carousel-container">
+                        <div class="carousel-content container">
+                          <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                          <h5 class="animate__animated animate__fadeInUp" style="color: white;">We are a startup of real estate developers ready to build your dream</h5>
+                          <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Slide 5 -->
+                    <div class="carousel-item" style="background-image: url('assets/img/slides/stair2.jpg');">
+                      <div class="carousel-container">
+                        <div class="carousel-content container">
+                          <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                          <h5 class="animate__animated animate__fadeInUp" style="color: white;">We are a startup of real estate developers ready to build your dream</h5>
+                          <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
+                        </div>
+                      </div>
+                    </div>
 
+                  <!-- Slide 6 -->
+                  <div class="carousel-item" style="background-image: url('assets/img/slides/lounge.jpg');">
+                    <div class="carousel-container">
+                      <div class="carousel-content container">
+                        <h1 class="animate__animated animate__fadeInDown" style="font-weight: bold;">Welcome to Defo <span>Properties</span></h1>
+                        <h5 class="animate__animated animate__fadeInUp" style="color: white;">We are a startup of real estate developers ready to build your dream</h5>
+                        <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto" style="margin-top: 0;">Contact Us</a>
+                      </div>
+                    </div>
+                  </div>            
         </div>
 
         <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
@@ -192,8 +222,7 @@
               <h3>Our Mission</h3>
               <p>
                 Defo properties mission is to have satisfied clients and to be well-known in the real estate community. We want to also provide an 
-                outstanding level of services and expertise in the real 
-                estate market that is innovation and ambitious. 
+                outstanding level of services and expertise in the real estate market that is innovative and aspiring. 
                 Our company is dedicated to highest standards, systems and performance necessary to fulfill all your 
                 real estate dreams. We as a company want to promote the highest ethical and professional standards and 
                 cooperation among its members by providing programs and services to meet the evolving needs of real estate industry and customers.
@@ -205,7 +234,7 @@
             <div class="content">
               <h3>Our Vision</h3>
               <p>
-                Our vision statement is to be one of the best estate companies in Ghana and its affliated countries. We want 
+                Our vision statement is to be one of the best estate companies in Ghana and its affliated services. We want 
                 to be the company that will provide quick and efficient services for our customers.We offer alot of customer 
                 centered services. Whereby producing efficient results and 24/7 support are grounds we stand on.
               </p>
@@ -674,50 +703,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/apt.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4></h4>
-                <p></p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/apt.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/stair2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4></h4>
-                <p></p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/stair2.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/lounge.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4></h4>
-                <p></p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/lounge.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section><!-- End Portfolio Section -->
     <!--Why choose Defo properties-->
