--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="content">
               <h3>Our Vision</h3>
               <p>
-                Our vision statement is to be one of the best estate companies in Ghana and its affliated countries. We want 
+                Our vision statement is to be one of the best estate companies in Ghana and its affiliated countries. We want 
                 to be the company that will provide quick and efficient services for our customers.We offer alot of customer 
                 centered services. Whereby producing efficient results and 24/7 support are grounds we stand on.
               </p>
